--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,8 @@ body {
   height: 0.5rem;
   background-color: transparent;
   border: 5px solid #2b2839;
-  border-radius: 10px;
+  border-radius: 100%;
+  border-style: double;
   color: transparent;
   padding: 10px;
   box-shadow: #26394d 0px 20px 30px -10px;
